# epidemik

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  season_test.py
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  modules.rst  requirements.txt
docs/source/: conf.py  epidemik.rst  index.rst  modules.rst
models/: SEIIR.yaml  SEIIRD.yaml  SEIR.yaml  SEIRS.yaml  SI.yaml  SIR.yaml  model_list.txt
src/epidemik/: EpiModel.py  MetaEpiModel.py  NetworkEpiModel.py  __init__.py  utils.py
tests/: test_EpiModel.py  test_MetaEpiModel.py  test_NetworkEpiModel.py  test_utils.py  tests_EpiModel.py  tests_MetaEpiModel.py
