[project]
name = "epidemik"
version = "0.1.3.1"

authors = [
  { name="Bruno Gonçalves", email="bgoncalves@data4sci.com" },
]
description = "A package to simulate compartmental epidemic models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
 "matplotlib>=3.3",
 "networkx>=3",
 "numpy>=1.20",
 "pandas>=2.0",
 "scipy>=1.7",
 "tqdm>=4",
 "pyyaml (>=6.0.2,<7.0.0)",
 "seaborn (>=0.13.2,<0.14.0)",
 "scikit-learn (>=1.6.1,<2.0.0)",
 "typing-extensions (>=4.13.0,<5.0.0)",
]
[project.urls]
Homepage = "https://github.com/DataForScience/epidemik"
Issues = "https://github.com/DataForScience/epidemik/issues"
Documentation = "https://epidemik.readthedocs.io/"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
sphinx = "7.4"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.from-file]
source = "src/epidemik/__init__.py"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
